# hlint-plugin

./: .hlint.yaml  CHANGELOG.md  README.md  cabal.project  flake.nix  garnix.yml  hlint-plugin.cabal  stack.yaml
ghc90/: ghc-lib-parser-ex.nix
ghc90/HLint/: Plugin.hs
ghc92/: ghc-lib-parser-ex.nix
ghc92/HLint/: Plugin.hs
ghc94/HLint/: Plugin.hs
ghc96/: ghc-lib-parser-ex.nix  hlint.nix
ghc96/HLint/: Plugin.hs
src/HLint/: Plugin.hs
src/HLint/Plugin/: Settings.hs
